--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       </main>
        <footer>
-          <p>site criando por Ryan, Quer mais? </p>
+          <p>site criando por Ryan, Quer mais? 2</p>
        </footer>
 
 
