--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>O mangá de Miura é inspirado na Europa medieval e é ambientado em um mundo de fantasia chamado Midland, em que criaturas como demônios e fadas são reais. mais?</p>
 
 
-                <img src="imagems/Kentaro Miura 1.jpg" alt="">
+                <img src="imagems/Kentaro Miura pq.xcf" alt="">
 
                 <p>No dia 6 de maio de 2021, Kentaro faleceu aos 54 anos devido a uma dissecção da aorta. A morte foi divulgada no dia 20 de maio pela Hakusensha.[</p>
 
