--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       </main>
        <footer>
-          <p>site criando por Ryan, Quer mais? 4</p>
+          <p>site criando por Ryan, Quer mais? </p>
           <img src="imagems/Kentaro Miura pq.xcf" alt="" srcset="">
        </footer>
 
