--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                             <li>Duranki (2019-2021)</li>
                             </ul>
                           <p>Infelizmente, o grande Miura partiu deixado a obra incompleta muitos ainda tem fé em um final bom para Berserk, mas sendo bem sincero nunca mais vai ser a mesma coisa afinal de contas não é mais o miura</p>
+                          <img src="imagems/Kentaro Miura pq.xcf" alt="">
      </aside>
 
 
@@ -60,7 +61,7 @@
       </main>
        <footer>
           <p>site criando por Ryan, Quer mais? </p>
-          <img src="imagems/Kentaro Miura pq.xcf" alt="" srcset="">
+          
        </footer>
 
 
